--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+"axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie": "^0.5.0",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "router": "^1.3.7",
     "validator": "^13.7.0"
   }
