--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-"axios": "^1.1.3",
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie": "^0.5.0",
@@ -21,8 +21,10 @@
     "express": "^4.18.1",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
+    "hampel-filter": "^1.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "minmaxscaler": "^1.0.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
